trunk/Archive2/a3/c098073ab367e9/output
main.cpp:75:26: error: no matching member function for call to 'emplace'
   complex_data_vector0->emplace();
   ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/usr/local/include/boost/container/vector.hpp:1425:13: note: candidate function template not viable: requires at least argument 'position', but no arguments were provided
   iterator emplace(const_iterator position, Args && ...args)
            ^
1 error generated.
